Published content: Art2 publicado

--- a/ghp-scripts/layouts/_default/single_article.html
+++ b/ghp-scripts/layouts/_default/single_article.html
@@ -11,7 +11,7 @@
     ·
     <span class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
       <span itemprop="name">
-        By 
+        Por 
         {{ range $index, $value := .Params.authors }}
         {{ if gt $index 0 }} {{ print "," }} {{ end }}
           {{ $value }}
